Revision history for {{$dist->name}}

{{$NEXT}}

0.043     2013-12-14 17:34:14Z
          - stale [@Git] modules now being checked for again

0.042     2013-12-08 00:24:09Z
          - drop use of [-Encoding] Pod::Weaver plugin - no longer needed with
            Pod::Weaver 4
          - update generated CONTRIBUTING file to filter out local plugins
            when running 'dzil authordeps --missing', and to mention the irc
            channel when available
          - new "airplane" mode, to faciliate development while the network is
            not available

0.041     2013-11-29 06:02:08Z
          - add explicit dep on Pod::Markdown, to get the version that creates
            metacpan hyperlinks
          - add [Test::Portability]
          - no longer prompting about stale [@Git] modules

0.040     2013-11-12 17:50:39Z
          - [Git::CheckFor::MergeConflicts] is working again
          - work around failure of minting test where a development release of
            a plugin is required to generate all expected files

0.039     2013-11-11 02:30:24Z
          - fix config for [Git::Commit], to properly commit files that were
            newly added to the dist
          - now generating full starting content for CONTRIBUTING, README.md,
            LICENSE when minting a new distribution

0.038     2013-11-09 22:46:12Z
          - fixed typo in CONTRIBUTING file (thanks, Сергей Романов!)
          - added use of [Prereqs::AuthorDeps], for more entries in develop
            prereqs

0.037     2013-11-02 20:58:18Z
          - fix regexp error while creating CONTRIBUTING file

0.036     2013-11-02 20:54:09Z
          - version format in Changes file altered from appending -TRIAL to
            the version (which violates CPAN::Meta::Spec) to adding
            ' (TRIAL RELEASE)' after the timestamp
          - temporarily (?) disable broken [Git::CheckFor::MergeConflicts]
          - more tweaks to CONTRIBUTING text